[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/levels/level01/Level_01_Tutorial.gd" type="Script" id=1]
[ext_resource path="res://CursorBoy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/collidable_label.gd" type="Script" id=3]
[ext_resource path="res://scenes/levels/level01/Node.gd" type="Script" id=4]
[ext_resource path="res://scenes/levels/level01/FileGroup.gd" type="Script" id=5]
[ext_resource path="res://scenes/levels/level01/HelpTrigger.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 581.667, 410.269 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.99892, 7.56165 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 334.041, 382.45 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 40 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 270, 250 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 151.302, 60.5969 )

[node name="Level01_Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldBounds" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -235.602, 352.452 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBounds"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 667.673, 46.7792 )
shape = SubResource( 1 )

[node name="CursorBoy" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 21.7078, 29.8747 )

[node name="CollisionBox" parent="CursorBoy" index="1"]
shape = SubResource( 2 )

[node name="Platform1" type="Label" parent="."]
margin_left = 6.0
margin_top = 43.0
margin_right = 148.0
margin_bottom = 57.0
text = "Welcome to Terminal."
script = ExtResource( 3 )

[node name="Platform2" type="Label" parent="."]
margin_left = 66.6263
margin_top = 126.866
margin_right = 343.626
margin_bottom = 140.866
text = "Use the command /help or /h to get started"
script = ExtResource( 3 )

[node name="HelpGroup" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="CollidableLabel2" type="Label" parent="HelpGroup"]
margin_left = 360.0
margin_top = 350.0
margin_right = 569.0
margin_bottom = 364.0
text = "ls - lists files in current directory"
script = ExtResource( 3 )

[node name="CollidableLabel5" type="Label" parent="HelpGroup"]
margin_left = 318.36
margin_top = 310.0
margin_right = 390.36
margin_bottom = 324.0
text = "Commands"
script = ExtResource( 3 )

[node name="CollidableLabel6" type="Label" parent="HelpGroup"]
margin_left = 318.36
margin_top = 224.526
margin_right = 385.36
margin_bottom = 238.526
text = "Navigation"
script = ExtResource( 3 )

[node name="CollidableLabel7" type="Label" parent="HelpGroup"]
margin_left = 360.0
margin_top = 263.0
margin_right = 624.0
margin_bottom = 294.0
text = "Use <h> to move left, <l>  to move right
<j> to jump"
script = ExtResource( 3 )

[node name="CollidableLabel8" type="Label" parent="HelpGroup"]
margin_left = 360.0
margin_top = 390.0
margin_right = 468.0
margin_bottom = 404.0
rect_pivot_offset = Vector2( 64.2882, 26.8959 )
text = "open - opens file"
script = ExtResource( 3 )

[node name="CollidableLabel9" type="Label" parent="HelpGroup"]
margin_left = 360.0
margin_top = 430.0
margin_right = 596.0
margin_bottom = 444.0
text = "clear - clears and resets the terminal"
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="FileGroup" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="CollidableLabel" type="Label" parent="FileGroup"]
margin_left = 320.0
margin_top = 510.0
margin_right = 360.0
margin_bottom = 524.0
custom_colors/font_color = Color( 1, 0.721569, 0.192157, 1 )
text = "qa.txt"
script = ExtResource( 3 )

[node name="CollidableLabel3" type="Label" parent="FileGroup"]
margin_left = 320.0
margin_top = 560.0
margin_right = 369.0
margin_bottom = 574.0
custom_colors/font_color = Color( 1, 0.721569, 0.192157, 1 )
text = "file2.txt"
script = ExtResource( 3 )

[node name="CollidableLabel4" type="Label" parent="FileGroup"]
margin_left = 320.0
margin_top = 610.0
margin_right = 388.0
margin_bottom = 624.0
custom_colors/font_color = Color( 1, 0.721569, 0.192157, 1 )
text = "level02.txt"
script = ExtResource( 3 )

[node name="CollidableLabel" type="Label" parent="."]
margin_left = 5.73999
margin_top = 61.7907
margin_right = 264.74
margin_bottom = 75.7907
text = "To enter command mode, press <enter>"
script = ExtResource( 3 )

[node name="Triggers" type="Node" parent="."]
editor/display_folded = true

[node name="HelpTrigger" type="Area2D" parent="Triggers"]
editor/display_folded = true
visible = false
position = Vector2( 96.1257, 75.8678 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/HelpTrigger"]
position = Vector2( 236.739, 321.253 )
shape = SubResource( 5 )

[node name="Level2Trigger" type="Area2D" parent="Triggers"]
editor/display_folded = true
visible = false
position = Vector2( 320, 610 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/Level2Trigger"]
position = Vector2( 40, 10 )
shape = SubResource( 6 )

[node name="CommandsTrigger" type="Area2D" parent="Triggers"]
editor/display_folded = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/CommandsTrigger"]
position = Vector2( 508.452, 440 )
shape = SubResource( 7 )

[node name="Cameras" type="Node" parent="."]
editor/display_folded = true

[node name="CameraTransitionTrigger01" type="Area2D" parent="Cameras"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cameras/CameraTransitionTrigger01"]
position = Vector2( 458.996, 251.439 )
shape = SubResource( 4 )

[node name="CameraHint01" type="Node2D" parent="Cameras"]
position = Vector2( 820, 510 )

[node name="Camera" type="Camera2D" parent="Cameras"]
position = Vector2( 510, 300 )
current = true
[connection signal="body_exited" from="WorldBounds" to="." method="_on_WorldBounds_body_exited"]
[connection signal="player_submitted_text" from="CursorBoy" to="." method="_on_CursorBoy_player_submitted_text"]
[connection signal="body_shape_entered" from="Triggers/HelpTrigger" to="." method="_on_player_enters_help_trigger"]
[connection signal="body_shape_exited" from="Triggers/HelpTrigger" to="." method="_on_help_trigger_exited"]
[connection signal="body_shape_entered" from="Triggers/Level2Trigger" to="." method="_on_Level2Trigger_body_shape_entered"]
[connection signal="body_shape_exited" from="Triggers/Level2Trigger" to="." method="_on_Level2Trigger_body_shape_exited"]
[connection signal="body_shape_entered" from="Triggers/CommandsTrigger" to="." method="_on_CommandsTrigger_body_shape_entered"]
[connection signal="body_shape_exited" from="Triggers/CommandsTrigger" to="." method="_on_CommandsTrigger_body_shape_exited"]
[connection signal="body_entered" from="Cameras/CameraTransitionTrigger01" to="." method="_on_CameraTransitionTrigger01_body_entered"]

[editable path="CursorBoy"]
